--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "simple-color-picker": "^1.0.5",
+    "stats.js": "^0.17.0",
     "three": "^0.147.0",
     "web-vitals": "^2.1.4"
   },
