--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-google-button": "^0.7.2",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.0",
     "simple-color-picker": "^1.0.5",
     "stats.js": "^0.17.0",
     "three": "^0.147.0",
